# brioche

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PHASE1_GOVERNANCE_SPEC.md  PR_REPORT_COMPLETE.md  README.md  ROADMAP.md  SPECS.md  TOOLS_NORM.md  clippy.toml  deny.toml  rustfmt.toml
crates/apps/agent-terminal/: Cargo.toml  README.md
crates/apps/agent-terminal/src/: bridge.rs  config.rs  headless.rs  interactive.rs  lib.rs  main.rs  shell_builder.rs
crates/apps/agent-terminal/tests/: terminal_tests.rs
crates/apps/brioche-desktop/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
crates/apps/brioche-desktop/capabilities/: default.json
crates/apps/brioche-desktop/frontend/: astro.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  postbuild.js  vite.config.ts
crates/apps/brioche-desktop/src/: commands.rs  lib.rs  main.rs  memory.rs  profiles.rs  settings.rs  skills.rs  state.rs
crates/brioche-cli/: Cargo.toml  README.md
crates/brioche-cli/src/: bridge.rs  headless.rs  interactive.rs  main.rs  repl.rs  session_manager.rs  shell_builder.rs  ui.rs
crates/brioche-core/: Cargo.toml
crates/brioche-core/benches/: cow_rollback.rs  cross_instance_determinism.rs  extension_lookup.rs  hook_effect_o1.rs  stream_latency.rs  tiered_rollback_critical.rs
crates/brioche-core/src/: engine.rs  extension.rs  lib.rs  plugin.rs  types.rs
crates/brioche-core/tests/: engine_transition.rs  extension_storage.rs  property_transition.rs  session_types.rs
crates/brioche-docgen/: Cargo.toml
crates/brioche-docgen/src/: lib.rs  main.rs
crates/brioche-governance/: Cargo.toml
crates/brioche-governance-default/: Cargo.toml
crates/brioche-governance-default/src/: adaptive_undo_frame_guard.rs  compatibility_matrix.rs  cycle_budget_guard.rs  depth_guard.rs  epoch_guard.rs  historical_cow_budget_policy.rs  hook_effect_constraint.rs  json_argument_accumulator.rs  lib.rs  negotiation_broker.rs  noop_rollback_policy.rs  noop_traits.rs  policy_aggregator.rs  profile.rs  quarantine_manager.rs  recovery_policy.rs  rollback_telemetry_emitter.rs  state_consistency_guard.rs  subroutine_cleanup_guard.rs  subroutine_orchestrator.rs  subroutine_timeout_policy.rs  system_failover_guard.rs  tiered_undo_frame_guard.rs  tool_call_detector.rs  tool_execution_tracker.rs  tool_result_formatter.rs  tool_timeout_policy.rs  transition_conflict_logger.rs  tree_decision_aggregator.rs  undo_frame_guard.rs
crates/brioche-governance-default/tests/: governance_profiles.rs
crates/brioche-governance/src/: lib.rs
crates/brioche-macro/: Cargo.toml
crates/brioche-macro/src/: lib.rs
crates/brioche-macro/tests/: compile_test.rs
crates/brioche-macro/tests/ui/: fail_hashmap.stderr  fail_hashset.stderr  fail_manual_impl.rs  fail_manual_impl.stderr  fail_missing_clone.rs  fail_missing_clone.stderr  fail_ui_type.rs  fail_ui_type.stderr  fail_unknown_attr.rs  fail_unknown_attr.stderr  fail_vec_undetermined.rs  fail_vec_undetermined.stderr  pass_basic.rs
crates/brioche-playground/: Cargo.toml
crates/brioche-playground/src/: lib.rs  main.rs
crates/brioche-plugin-kit/: Cargo.toml
crates/brioche-plugin-kit/src/: lib.rs
crates/brioche-plugin-kit/tests/: plugin_macros.rs
crates/brioche-provider-openai/: Cargo.toml
crates/brioche-provider-openai/src/: client.rs  config.rs  lib.rs  request.rs  sse.rs
crates/brioche-shell-persistence/: Cargo.toml
crates/brioche-shell-persistence/benches/: redb_idempotence.rs
crates/brioche-shell-persistence/src/: cache.rs  dto.rs  error.rs  lib.rs  load.rs  save.rs  schema.rs  storage.rs
crates/brioche-shell-persistence/tests/: persistence_tests.rs
crates/brioche-shell-projection/: Cargo.toml
crates/brioche-shell-projection/src/: content_renderer.rs  ipc_command.rs  lib.rs  stream_buffer.rs  subroutine_manager.rs  ui_composer.rs  ui_performance_policy.rs  ui_registry.rs  widget.rs
crates/brioche-shell-projection/tests/: projection_tests.rs
crates/brioche-shell-runtime/: Cargo.toml
crates/brioche-shell-runtime/src/: effect_executor.rs  engine_watchdog.rs  lib.rs  llm_client.rs  persistence_mode.rs  shell.rs  signal_adapter.rs  signal_multiplexer.rs  telemetry.rs  tick_emitter.rs  transition_journal.rs
crates/brioche-shell-runtime/tests/: replay_journal.rs  shell_runtime.rs
crates/brioche-std/: Cargo.toml
crates/brioche-std/src/: audit_logger.rs  circuit_breaker.rs  context_optimizer.rs  gc_policy.rs  lib.rs  pending_task_manager.rs  token_tracker.rs  tool_result_policy.rs
crates/brioche-std/tests/: replay_audit.rs  standard_plugins.rs
crates/brioche-tools-system/: Cargo.toml
crates/brioche-tools-system/src/: lib.rs  registry.rs
crates/brioche-tools-system/src/tools/: mod.rs  shell.rs  web.rs
crates/ecosystem/brioche-docgen/: Cargo.toml
crates/ecosystem/brioche-docgen/src/: lib.rs  main.rs
crates/ecosystem/brioche-docgen/tests/: cli.rs
crates/ecosystem/brioche-playground/: Cargo.toml
crates/ecosystem/brioche-playground/src/: lib.rs  main.rs
crates/ecosystem/brioche-std/: Cargo.toml
crates/ecosystem/brioche-std/src/: audit_logger.rs  circuit_breaker.rs  context_optimizer.rs  gc_policy.rs  lib.rs  pending_task_manager.rs  token_tracker.rs  tool_timeout_policy.rs
crates/ecosystem/brioche-std/tests/: replay_audit.rs  standard_plugins.rs
crates/infra/brioche-lint-core/: Cargo.toml
crates/infra/brioche-lint-core/src/: cli.rs  lib.rs  report.rs  walk.rs
crates/infra/brioche-reedline/: Cargo.toml
crates/infra/brioche-reedline/src/: lib.rs  ui.rs  (+2 more)
crates/infra/cargo-brioche-lint/: Cargo.toml
crates/infra/cargo-brioche-lint-invariants/: Cargo.toml
crates/kernel/brioche-core/: Cargo.toml
crates/kernel/brioche-governance-default/: Cargo.toml
tests/bench/: Cargo.toml  README.md
tests/bench/benches/: engine_transition.rs
tests/bench/src/: lib.rs
tests/integration/: Cargo.toml  README.md
tests/integration/src/: lib.rs
tests/property/: Cargo.toml  README.md
tests/property/src/: lib.rs
tests/replay/: Cargo.toml  README.md
tests/replay/src/: lib.rs
(+453 files in other folders)
