[workspace]
members = [
  "crates/*",
  "crates/cargo-brioche-lint-invariants",
  "crates/cargo-brioche-lint",
]
exclude = ["crates/brioche-plugin-template"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Brioche Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/brio-labs/brioche"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1"
brioche-core = { path = "crates/brioche-core" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
brioche-governance = { path = "crates/brioche-governance" }
brioche-governance-default = { path = "crates/brioche-governance-default" }
brioche-shell-runtime = { path = "crates/brioche-shell-runtime" }
brioche-shell-persistence = { path = "crates/brioche-shell-persistence" }
brioche-shell-projection = { path = "crates/brioche-shell-projection" }
brioche-std = { path = "crates/brioche-std" }
brioche-macro = { path = "crates/brioche-macro" }
brioche-plugin-kit = { path = "crates/brioche-plugin-kit" }
brioche-docgen = { path = "crates/brioche-docgen" }
brioche-playground = { path = "crates/brioche-playground" }
brioche-provider-openai = { path = "crates/brioche-provider-openai" }
brioche-tools-system = { path = "crates/brioche-tools-system" }
cargo-brioche-lint-invariants = { path = "crates/cargo-brioche-lint-invariants" }
cargo-brioche-lint = { path = "crates/cargo-brioche-lint" }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# ---------------------------------------------------------------------------
# Compilation profiles — Book V §Ch 11
# ---------------------------------------------------------------------------

[profile.headless]
inherits = "release"
lto = true
codegen-units = 1
strip = true

[profile.desktop]
inherits = "release"
lto = true
codegen-units = 1

[profile.wasm-test]
inherits = "release"
opt-level = "s"
lto = true

[profile.full]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
