[workspace]
members = [
  "crates/kernel/*",
  "crates/runtime/*",
  "crates/providers/*",
  "crates/tools/*",
  "crates/ecosystem/*",
  "crates/apps/*",
  "crates/infra/*",
]
exclude = ["crates/brioche-plugin-template"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Brioche Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/brio-labs/brioche"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1"
brioche-core = { path = "crates/kernel/brioche-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
brioche-governance = { path = "crates/kernel/brioche-governance" }
brioche-governance-default = { path = "crates/kernel/brioche-governance-default" }
brioche-shell-runtime = { path = "crates/runtime/brioche-shell-runtime" }
brioche-shell-persistence = { path = "crates/runtime/brioche-shell-persistence" }
brioche-shell-projection = { path = "crates/runtime/brioche-shell-projection" }
brioche-std = { path = "crates/ecosystem/brioche-std" }
brioche-macro = { path = "crates/kernel/brioche-macro" }
brioche-plugin-kit = { path = "crates/ecosystem/brioche-plugin-kit" }
brioche-docgen = { path = "crates/ecosystem/brioche-docgen" }
brioche-playground = { path = "crates/ecosystem/brioche-playground" }
brioche-provider-openai = { path = "crates/providers/brioche-provider-openai" }
brioche-tools-system = { path = "crates/tools/brioche-tools-system" }
brioche-reedline = { path = "crates/infra/brioche-reedline" }
cargo-brioche-lint-invariants = { path = "crates/infra/cargo-brioche-lint-invariants" }
cargo-brioche-lint = { path = "crates/infra/cargo-brioche-lint" }
dirs = "6"
reqwest = { version = "0.13", features = ["json"] }
lazy_static = "1"
base64-simd = "0.8"
jsonschema = "0.46"
keyring = "3.6"
chacha20poly1305 = "0.10"
argon2 = "0.5"
base64 = "0.22"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.lints.rust]
missing_docs = "warn"

# ---------------------------------------------------------------------------
# Compilation profiles — Book V §Ch 11
# ---------------------------------------------------------------------------

[profile.headless]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = "s"

[profile.desktop]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = "s"

[profile.wasm-test]
inherits = "release"
opt-level = "s"
lto = true

[profile.full]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = "s"
