[package]
name = "brioche-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive REPL for Brioche using reedline"

[[bin]]
name = "brioche-cli"
path = "src/main.rs"

[dependencies]
brioche-core = { workspace = true }
brioche-plugin-kit = { workspace = true }
brioche-shell-runtime = { workspace = true }
brioche-shell-persistence = { workspace = true }
brioche-provider-openai = { workspace = true }
brioche-tools-system = { workspace = true }
reedline = { version = "0.48", features = ["external_printer"] }
nu-ansi-term = "0.50"
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4.6", features = ["derive", "env"] }

[lints]
workspace = true
