[package]
name = "brioche-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Synchronous kernel and pure mechanisms"

[dependencies]
brioche-macro = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", default-features = false, features = ["use-std"] }
thiserror = "2"
parking_lot = "0.12"
bytes = { version = "1", features = ["serde"] }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["use-std"] }

[[bench]]
name = "extension_lookup"
harness = false

[lints]
workspace = true
