[package]
name = "brioche-docgen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Documentation generator for Brioche specs"

[dependencies]
brioche-core = { workspace = true }
brioche-governance = { workspace = true }
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = "1"
thiserror = "2"

[lints]
workspace = true
