[package]
name = "brioche-governance-default"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference implementations of governance traits"

[dependencies]
brioche-governance = { workspace = true }
brioche-core = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
