[package]
name = "brioche-playground"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Docker dev environment and playground for Brioche"

[[bin]]
name = "brioche-playground"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
brioche-core = { workspace = true }
brioche-governance-default = { workspace = true }
brioche-plugin-kit = { workspace = true }

[lints]
workspace = true
