[package]
name = "brioche-provider-openai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAI-compatible LLM provider for Brioche Shell Runtime"

[dependencies]
brioche-core = { workspace = true }
brioche-shell-runtime = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "stream",
  "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = "2"

tracing = "0.1"
async-trait = { workspace = true }

[lints]
workspace = true
