[package]
name = "brioche-shell-persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shell persistence layer"

[dependencies]
brioche-core = { workspace = true }
brioche-governance = { workspace = true }
brioche-shell-runtime = { workspace = true }
redb = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[lints]
workspace = true
