[package]
name = "brioche-shell-persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shell persistence layer"

[dependencies]
brioche-core = { workspace = true }
brioche-governance = { workspace = true }
brioche-shell-runtime = { workspace = true }
redb = "4"
rmp-serde = "1.3"
zstd = "0.13"
lru = "0.16"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt"] }
tokio-util = "0.7"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "redb_idempotence"
harness = false

[[bench]]
name = "subroutine_cache_l1"
harness = false

[lints]
workspace = true
