[package]
name = "brioche-shell-projection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shell projection layer — UI registry, streaming renderer, and frame composer"

[dependencies]
brioche-core = { workspace = true }
brioche-governance = { workspace = true }
brioche-shell-runtime = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2.7", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
