[package]
name = "brioche-shell-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shell runtime — async effect execution and event loop"

[dependencies]
brioche-core = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
bytes = { version = "1", features = ["serde"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
brioche-governance-default = { workspace = true }

[lints]
workspace = true
