[package]
name = "brioche-replay-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-crate replay journal tests"
publish = false

[dependencies]
brioche-core = { workspace = true }
brioche-governance-default = { workspace = true }
brioche-shell-runtime = { workspace = true }

[lints]
workspace = true
