[package]
name = "agent-terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal terminal agent for Brioche"

[[bin]]
name = "agent-terminal"
path = "src/main.rs"

[dependencies]
brioche-core = { workspace = true }
brioche-plugin-kit = { workspace = true }
brioche-reedline = { workspace = true }
brioche-shell-runtime = { workspace = true }
brioche-shell-persistence = { workspace = true }
brioche-provider-openai = { workspace = true }
brioche-tool-readfile = { path = "../../tools/brioche-tool-readfile" }
brioche-tool-writefile = { path = "../../tools/brioche-tool-writefile" }
brioche-tool-listdir = { path = "../../tools/brioche-tool-listdir" }
brioche-tool-shell = { path = "../../tools/brioche-tool-shell" }
brioche-tool-fetch = { path = "../../tools/brioche-tool-fetch" }
reedline = { version = "0.48", features = ["external_printer"] }
nu-ansi-term = "0.50"
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
argh = "0.1"

[lints]
workspace = true
