[package]
name = "agent-terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal terminal agent for Brioche"

[[bin]]
name = "agent-terminal"
path = "src/main.rs"

[lib]
name = "agent_terminal"
path = "src/lib.rs"

[dependencies]
brioche-core = { workspace = true }
brioche-plugin-kit = { workspace = true }
brioche-reedline = { workspace = true }
brioche-shell-runtime = { workspace = true }
brioche-shell-persistence = { workspace = true }
brioche-shell-builder = { workspace = true }
brioche-provider-openai = { workspace = true }
brioche-tools-system = { workspace = true }
reedline = { version = "0.48", features = ["external_printer"] }
nu-ansi-term = "0.50"
tokio = { workspace = true }
tokio-util = { workspace = true }
argh = "0.1"

[lints]
workspace = true
