[package]
name = "brioche-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri desktop GUI for Brioche"

[[bin]]
name = "brioche-desktop"
path = "src/main.rs"

[lib]
name = "brioche_desktop_lib"
path = "src/lib.rs"

crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.3", features = ["custom-protocol"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
brioche-core = { workspace = true }
brioche-shell-runtime = { workspace = true }
brioche-shell-persistence = { workspace = true }
brioche-provider-openai = { workspace = true }
brioche-tools-system = { workspace = true }
brioche-plugin-kit = { workspace = true }
brioche-reedline = { workspace = true }
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1"
base64-simd = "0.8"
rand = "0.8"

[lints]
workspace = true
