[package]
name = "brioche-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri desktop GUI for Brioche"

[[bin]]
name = "brioche-desktop"
path = "src/main.rs"

[lib]
name = "brioche_desktop_lib"
path = "src/lib.rs"

crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["custom-protocol"] }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
brioche-core = { workspace = true }
brioche-shell-runtime = { workspace = true }
brioche-shell-persistence = { workspace = true }
brioche-provider-openai = { workspace = true }
brioche-tools-system = { workspace = true }
brioche-plugin-kit = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
lazy_static = { workspace = true }
base64-simd = { workspace = true }

[lints]
workspace = true
