[package]
name = "brioche-std"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Standard plugins and ecosystem"

[dependencies]
brioche-core = { workspace = true }
brioche-governance-default = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
