[package]
name = "brioche-lint-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared library for Brioche lint tooling"

[lib]
name = "brioche_lint_core"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
