[package]
name = "brioche-reedline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared terminal infrastructure for Brioche agents"

[lib]
name = "brioche_reedline"
path = "src/lib.rs"

[dependencies]
brioche-shell-runtime = { workspace = true }
reedline = { version = "0.48", features = ["external_printer"] }
nu-ansi-term = "0.50"
tokio = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"

[lints]
workspace = true
