[package]
name = "cargo-brioche-lint-invariants"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cargo subcommand for checking Brioche invariant references"

[[bin]]
name = "cargo-brioche-lint-invariants"
path = "src/main.rs"

[dependencies]
brioche-governance-default = { workspace = true }
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
