[package]
name = "brioche-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Synchronous kernel and pure mechanisms"

[dependencies]
brioche-macro = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", default-features = false, features = ["use-std"] }
thiserror = "2"
bytes = { version = "1", features = ["serde"] }

[dev-dependencies]
brioche-governance-default = { workspace = true }
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", default-features = false, features = ["use-std"] }

[[bench]]
name = "extension_lookup"
harness = false

[[bench]]
name = "stream_latency"
harness = false

[[bench]]
name = "stream_zero_alloc"
harness = false

[[bench]]
name = "hook_effect_o1"
harness = false

[[bench]]
name = "cross_instance_determinism"
harness = false

[[bench]]
name = "cow_rollback"
harness = false

[[bench]]
name = "tiered_rollback_critical"
harness = false

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
missing_docs = "deny"
