[package]
name = "brioche-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Synchronous kernel and pure mechanisms"

[dependencies]
brioche-macro = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
postcard = { version = "1", default-features = false, features = ["use-std"] }
thiserror = "2"
bytes = { workspace = true, features = ["serde"] }

[dev-dependencies]
brioche-governance-default = { workspace = true }
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
postcard = { version = "1", default-features = false, features = ["use-std"] }
divan = "=0.1.21"

[[bench]]
name = "benchmarks"
harness = false

[lints]
workspace = true
