[package]
name = "brioche-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Synchronous kernel and pure mechanisms"

[dependencies]
brioche-governance = { workspace = true }
brioche-macro = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", default-features = false, features = ["use-std"] }
thiserror = "2"
bytes = { version = "1", features = ["serde"] }

[dev-dependencies]
brioche-governance-default = { workspace = true }
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", default-features = false, features = ["use-std"] }
divan = "=0.1.21"

[[bench]]
name = "benchmarks"
harness = false

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
missing_docs = "deny"
