[package]
name = "brioche-governance-default"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference implementations of governance traits"

[dependencies]
brioche-core = { workspace = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "negotiation_broker"
harness = false

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
missing_docs = "deny"
