[package]
name = "brioche-governance-default"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference implementations of governance traits"

[dependencies]
brioche-core = { workspace = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
divan = "=0.1.21"

[[bench]]
name = "benchmarks"
harness = false

[lints]
workspace = true
